--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,6 +64,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Xmx3g -XX:+UseConcMarkSweepGC
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
